--- a/src/components/SocialBar/SocialBar.css
+++ b/src/components/SocialBar/SocialBar.css
@@ -1,13 +1,13 @@
-.sticky-container{
+.sticky-container {
     padding:0px;
-    margin:0px;
+    margin: 0px -10px 0px 0px;
     position:fixed;
     right:-130px;
     top:230px;
     width:210px;
     z-index: 1100;
 }
-.sticky li{
+.sticky li {
     list-style-type:none;
     background-color:#fff;
     color:#efefef;
@@ -18,28 +18,27 @@
     -o-transition:all 0.25s ease-in-out;
     transition:all 0.25s ease-in-out;
     cursor:pointer;
-    border: 2px solid #2C3539;
     border-radius: 25px;
 }
-.sticky li:hover{
+.sticky li:hover {
     margin-left:-115px;
     
 }
-.sticky li img{
+.sticky li img {
     float:left;
     margin:5px 4px;
     margin-right:5px;
 }
-.sticky li p{
+.sticky li p {
     padding-top:5px;
     margin:0px;
     line-height:16px;
     font-size:11px;
 }
-.sticky li p a{
+.sticky li a {
     text-decoration:none;
     color:#2C3539;
 }
-.sticky li p a:hover{
+.sticky li a:hover {
     text-decoration:underline;
 }
